# QSF-examples

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  configure-gcc12  configure-gcc13  run  run-im  run-re  sendmeto
examples/: getOpts.h
examples/argon-2e/: CMakeLists.txt  FLX.wl  Untitled-4.nb  WF.wl  argon-2e.cpp  argon-2e_old.cpp  batch.sh  download  make_plots.sh  plot_flx.sh  plot_wf.sh  prun-im.sh  prun-re.sh  ptest.sh
examples/helium-2e/: README.md  batch.sh  download  helium-2e.cpp  make_plots.sh  pbuild.sh  prun-im.sh
examples/neon-3e/: neon-3e.cpp
examples/neon-3e/ptemplates/: prun-re.sh
examples/nitrogen-3e/: nitrogen-3e.cpp
examples/template-hardcoded/: template.cpp
examples/template-ini/: template-ini.cpp
examples/thiede/: thiede.cpp
tools/sbatch/: cancel-all
